src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBES32Compatibility_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBES32Compatibility_StringErrorContext.class */
public final class ARBES32Compatibility_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glPrimitiveBoundingBoxARB(FFFFFFFF)V", "net/labymod/core/laby3d/opengl/error/generated/ARBES32CompatibilityErrorContext");
        return methods;
    }
}
